0513 live, footer 진행 중

--- a/1_웹개발기초/clone_page/movis.html
+++ b/1_웹개발기초/clone_page/movis.html
@@ -40,7 +40,8 @@
         </nav>
       </div>
     </header>
-    <main>
+
+    <section class="main-sec01">
       <div class="main-wrap">
         <video
           preload="yes"
@@ -80,7 +81,7 @@
               </div>
             </div>
 
-            <div class="controls">
+            <div class="controls main-controls">
               <i class="fa-regular fa-circle-dot dot"></i>
               <i class="fa-solid fa-circle dot"></i>
               <i class="fa-solid fa-circle dot"></i>
@@ -127,7 +128,7 @@
           </div>
         </div>
       </div>
-    </main>
+    </section>
 
     <section class="main-sec02">
       <div class="news-section">
@@ -203,7 +204,7 @@
               <p class="detail">자세히보기</p>
             </div>
           </div>
-          <div class="news-controls">
+          <div class="news-controls controls">
             <i id="prev" class="fa-solid fa-angle-left"></i>
             <i id="next" class="fa-solid fa-angle-right"></i>
             <i class="fa-solid fa-play"></i>
@@ -214,62 +215,218 @@
       </div>
     </section>
 
-    <section>
-      <div class="mobis-mdeia">
-        <p>Mobis Media</p>
-        <p>Mobis LiVE</p>
-        <a href="">MOBIS LIVE 바로가기</a>
+    <section class="main-sec03">
+      <div class="media-section">
+        <div class="media-function-area">
+          <div class="media-main">
+            <p id="mobis-media">Mobis Media</p>
+            <p id="mobis-live">Mobis LIVE</p>
+            <a href="https://mobislive.com" class="link">MOBIS LIVE 바로가기</a>
+          </div>
+          <div class="media-controls controls">
+            <i id="prev" class="fa-solid fa-angle-left"></i>
+            <i id="next" class="fa-solid fa-angle-right"></i>
+            <i class="fa-solid fa-play"></i>
+            <p>01</p>
+            <p>10</p>
+          </div>
+        </div>
+        <div class="media-wrap">
+          <div class="media active">
+            <img
+              src="https://admin.mobislive.com/api/image/thumbnail/series/58eaaf6d48a74e8d90b9bc9a1b72255a.jpg"
+              alt=""
+            />
+            <span class="media-title">모빌리티투어</span>
+            <span class="media-detail">
+              바다가 얼면 항로를 개척해주는 '쇄빙선', 우리나라에도 있을까?
+            </span>
+          </div>
+
+          <div class="media">
+            <img
+              src="https://admin.mobislive.com/api/image/thumbnail/series/6d9140db218645279dd64892c2059048.jpg"
+              alt=""
+            />
+            <div class="media-text">
+              <p class="media-title">므브스 뉴스</p>
+              <p class="media-detail">
+                이래서 다들 현대모비스 가고 싶어함ㅋㅋ 재미에 진심인
+                현대모비스의 기업문화! | 므브스뉴스 EP.46
+              </p>
+            </div>
+          </div>
+
+          <div class="media">
+            <img
+              src="https://admin.mobislive.com/api/image/thumbnail/series/bbc50bb401b84c9eb95c695a4c22be81.jpg"
+              alt=""
+            />
+            <div class="media-text">
+              <p class="media-title">모빌리투어</p>
+              <p class="media-detail">
+                기차 타고 해발 2,451m를 오르다! 대만 아리산 투어 삼림열차
+              </p>
+            </div>
+          </div>
+
+          <div class="media">
+            <img
+              src="https://admin.mobislive.com/api/image/thumbnail/series/13e037a1d1c64065b033c2687efcc3c8.jpg"
+              alt=""
+            />
+            <div class="media-text">
+              <p class="media-title">모빌리티 전시</p>
+              <p class="media-detail">
+                [Seoul Mobility Show 2025] MOVIS Top Highlights
+              </p>
+            </div>
+          </div>
+
+          <div class="media">
+            <img
+              src="https://admin.mobislive.com/api/image/thumbnail/series/e5474603388743898c15aab040da1e00.png"
+              alt=""
+            />
+            <div class="media-text">
+              <p class="media-title">의식주동</p>
+              <p class="media-detail">
+                화담숲, 서울대공완 가격과 주차 공간? 경기도 아이들과 가볼만한 곳
+                추천
+              </p>
+            </div>
+          </div>
+
+          <div class="media">
+            <img
+              src="https://admin.mobislive.com/api/image/thumbnail/series/d271a6370566496abe298b83ec747a66.jpg"
+              alt=""
+            />
+            <div class="media-text">
+              <p class="media-title">모비와이드</p>
+              <p class="media-detail">
+                탄소중립을 실현하기 위한 전 세계 각 업계의 고군분투! 5가지
+                업계의 친환경소재 활용 사례
+              </p>
+            </div>
+          </div>
+
+          <div class="media">
+            <img
+              src="https://admin.mobislive.com/api/image/thumbnail/series/ff1edc7ab6db4c07adeeb9436088769a.jpg"
+              alt=""
+            />
+            <div class="media-text">
+              <p class="media-title">모빌리투어</p>
+              <p class="media-detail">
+                [전운보초] 중고차 구매할 때 곡 살펴봐야 할 자동차 '연식'과
+                '연형'의 차이
+              </p>
+            </div>
+          </div>
+
+          <div class="media">
+            <img
+              src="https://admin.mobislive.com/api/image/thumbnail/series/3a3fb149e8b841528b9ab09b43ab9efd.jpg"
+              alt=""
+            />
+            <div class="media-text">
+              <p class="media-title">모빌리티 테크</p>
+              <p class="media-detail">[MOBIS Tech] Iconic Speaker</p>
+            </div>
+          </div>
+
+          <div class="media">
+            <img
+              src="https://admin.mobislive.com/api/image/thumbnail/series/c6d649aaab7d4294b7aa9cd825d099d3.png"
+              alt=""
+            />
+            <div class="media-text">
+              <p class="media-title">모비스토리</p>
+              <p class="media-detail">
+                2025 서울모빌리티쇼(서울모터쇼) 현장스케치: e코너시스템 모비온,
+                홀로그래픽 윈드쉴드 디스플레이 등 현대모비스 기술 총집합!
+              </p>
+            </div>
+          </div>
+
+          <div class="media">
+            <img
+              src="https://admin.mobislive.com/api/image/thumbnail/series/35857f6055fb4c828874e3bfdba4f29a.jpg"
+              alt=""
+            />
+            <div class="media-text">
+              <p class="media-title">M.PEOPLE</p>
+              <p class="media-detail">
+                [M.PEOPLE] Raymond Berg | Key Account Executive | MOBIS North
+                America
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="main-sec04">
+      <div class="recruit-section">
+        <div class="inner-padding">
+          <div class="title">
+            <p id="red-title">Recruit</p>
+            <p id="title">
+              더 넓은 미래를 향한<br />
+              꿈의 도전
+            </p>
+            <a href="" class="link">채용사이트 바로가기</a>
+          </div>
+        </div>
+
+        <div class="recruit-card-wrap">
+          <div class="recruit-card">
+            <img src="./images/recruit1.png" alt="" />
+            <p>People</p>
+            <h3>인재존중의 기업문화를<br />실천하는 모비스인</h3>
+          </div>
+
+          <div class="recruit-card">
+            <img src="./images/recruit2.png" alt="" />
+            <p>Challenge</p>
+            <h3>도전적 추진력으로 실행하는 모비스인</h3>
+          </div>
+
+          <div class="recruit-card">
+            <img src="./images/recruit3.png" alt="" />
+            <p>Collaboration</p>
+            <h3>소통과 협력에 앞장서는 모비스인</h3>
+          </div>
+
+          <div class="recruit-card">
+            <img src="./images/recruit4.png" alt="" />
+            <p>Customer</p>
+            <h3>고객만족을 최우선시하는 모비스인</h3>
+          </div>
+
+          <div class="recruit-card">
+            <img src="./images/recruit5.png" alt="" />
+            <p>Globality</p>
+            <h3>글로벌 경쟁력을 갖춘 모비스인</h3>
+          </div>
+
+          <div class="recruit-card">
+            <img src="./images/recruit6.png" alt="" />
+            <p>Passion</p>
+            <h3>도전과 열정으로 내재된 핵심가치를 실천하는 모비스인</h3>
+          </div>
+        </div>
       </div>
     </section>
 
     <section>
-      <div class="recruit">
-        <p>더 넓은 미래를 향한 꿈의 도전</p>
-        <a href="">채용사이트 바로가기</a>
-
-        <div class="recruit-card">
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
+      <div class="esg-section">
+        <div class="title">
+          <p id="red-title">Sustainability</p>
+          <p id="title">지속가능경영 KEY ISSUE</p>
+          <p id="esg-detail">Green Transformation to 2045 Net-Zero</p>
         </div>
-
-        <div class="recruit-card">
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
-        </div>
-
-        <div class="recruit-card">
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
-        </div>
-
-        <div class="recruit-card">
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
-        </div>
-
-        <div class="recruit-card">
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
-        </div>
-
-        <div class="recruit-card">
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="esg">
-        <p>Sustainability</p>
-        <p>지속가능경영 KEY ISSUE</p>
-        <p>Green Transformation to 2045 Net-Zero</p>
         <img src="" alt="" />
 
         <p>NET_ZERO REPORT</p>
@@ -284,42 +441,135 @@
     </section>
 
     <section>
-      <p>Investors</p>
-      <p>투자정보</p>
+      <div class="invest-wrap">
+        <div class="title">
+          <p id="red-title">Investors</p>
+          <p id="title">투자정보</p>
+        </div>
+        <div class="stock-wrap">
+          <a class="stock-live">
+            <div class="stock-info">
+              <p id="live">
+                <span>실시간 주가정보</span>
+                <span>2025년5월12일 15:19 기준</span>
+              </p>
+              <span>
+                <span>25,5000</span>
+                <span>원</span>
+              </span>
+            </div>
+            <div class="stock-comparison">
+              <span>전일대비</span>
+              <span>4000</span>
+              <span>등락률</span>
+              <span>1.57</span>
+              <i id="next" class="fa-solid fa-angle-right"></i>
+            </div>
+          </a>
 
-      <div class="stock">
-        <p>실시간 주가정보</p>
-        <p>255,5000원</p>
-        <p>전일대비 -1500</p>
-        <p>등락률 -0.58%</p>
-        <p>2025년 05월 07일 11:10 기준</p>
-      </div>
+          <div class="invest-sec">
+            <div class="invest-sec1">
+              <p>감사/사업보고</p>
+              <p>분기 및 연간 연결검토보고서</p>
+            </div>
 
-      <div>
-        <p>감사/사업보고</p>
-        <p>분기 및 연간 연결검토보고서</p>
-      </div>
-
-      <div>
-        <p>실적발표</p>
-        <p>분기별 경영실적 발표자료료</p>
+            <div class="invest-sec2">
+              <p>실적발표</p>
+              <p>분기별 경영실적 발표자료</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
     <footer>
-      <p>Lead the Shift in Mobility, Move the World beyond Possivilities</p>
+      <div class="footer-wrap">
+        <div class="footer-top">
+          <p class="footer-slogan">
+            Lead the Shift in Mobility,<br />Move the World beyond Possivilities
+          </p>
 
-      <div class="site">
-        <a href="">사이트안내</a>
-        <a href="">개인정보처리방침</a>
-        <a href="">영상정보 처리기기 운영방침</a>
-        <a href="">이용약관</a>
-        <a href="">이메일부단수집거부</a>
-        <a href="">사이버감사실</a>
-      </div>
+          <ul class="footer-util">
+            <li><a href="">사이트 안내</a></li>
+            <li><a href="">개인정보처리방침</a></li>
+            <li><a href="">영상정보 처리기기 운영방침</a></li>
+            <li><a href="">이용약관</a></li>
+            <li><a href="">이메일부단수집거부</a></li>
+            <li><a href="">사이버감사실</a></li>
+          </ul>
 
-      <div class="Family-Site">
-        <p>Family Site</p>
+          <div class="family-site">
+            <button class="footer-family-btn">Family Site</button>
+            <ul class="family-list">
+              <li>
+                <p class="ft-dt">그룹사</p>
+                <ul>
+                  <li>
+                    <a href="https://www.hyundai.co.kr">현대자동차그룹</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <p class="ft-dt">이해관계자 시스템</p>
+                <ul>
+                  <li>
+                    <a href="https://visit.mobis.co.kr/reserve/index.do"
+                      >방문자 예약</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://mpos.mobis.co.kr/login.jsp"
+                      >거래희망 협력사 등록</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <p class="ft-dt">비즈니스</p>
+                <ul class="footer-dd">
+                  <li>
+                    <a href="https://lims.mobis.co.kr/login.jsp"
+                      >LIMS(물류업체 통합관리)</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://www.haims.co.kr/"
+                      >HAIMS(유통망 부품운영)</a
+                    >
+                  </li>
+                  <li>
+                    <a href="http://spin.mobis.co.kr/common/"
+                      >SPIN(AS 협력업체 협업)</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://plmpartner.mobis.co.kr"
+                      >PLAM Partner(제품정보통합시스템)</a
+                    >
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer-bt">
+          <p class="copyright">
+            ⓒ HYUNDAI MOBIS
+            <br />
+            All Rights Reserved
+          </p>
+          <div class="fotter-cs">
+            <div class="footer-mark">
+              <a
+                href="https://www.mobis.com/resources/img/renew/common/web_accessibility.png?v=240904_1"
+              >
+                <span>과학기술정보통신부<br />웹접근성 인증</span>
+              </a>
+            </div>
+            <p class="footer-tel">대표번호 : 02.2018.5114</p>
+          </div>
+        </div>
       </div>
     </footer>
 
