--- a/1_웹개발기초/clone_page/movis.html
+++ b/1_웹개발기초/clone_page/movis.html
@@ -559,11 +559,13 @@
             <br />
             All Rights Reserved
           </p>
-          <div class="fotter-cs">
+          <div class="footer-cs">
             <div class="footer-mark">
-              <a
-                href="https://www.mobis.com/resources/img/renew/common/web_accessibility.png?v=240904_1"
-              >
+              <a href="">
+                <img
+                  src="https://www.mobis.com/resources/img/renew/common/web_accessibility.png?v=240904_1"
+                  alt=""
+                />
                 <span>과학기술정보통신부<br />웹접근성 인증</span>
               </a>
             </div>
